# shell-rust

./: Cargo.toml  README.md  history.txt  xyz.md
src/: autocomplete.rs  builtins.rs  command.rs  main.rs  shell.rs  shell_io.rs  trie.rs
