[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
is_executable = "1.0.5"
regex = "1.12.2"
rustyline = { version = "17.0.2", features = ["case_insensitive_history_search", "with-fuzzy", "with-sqlite-history"] }

